added <div> for pages and changed html files

--- a/Webseite/briefedition/public/data/briefe_html/brief1.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief1.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 d 20 Jully 1795<br>
                 <br>
@@ -21,6 +26,10 @@
                 Sehe ich Sie dann bald – aber heute nicht<br>
                 ich gehe zu kranken general – u küsse die gute Mutter<br>
                 nun in eile – Laroche<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 <span class="recipient-note"><span class="unclear">xxxxxx</span><br>
                 <span class="entity place" data-key="ort1">offb.</span> 20ter July<br>
@@ -35,5 +44,6 @@
                 Sie mir doch dies <span class="latintype">paquet</span> so gleich, das<br>
                 es niemand als <span class="underline">Sie</span> die wir kennen in die<br>
                 hände bekommt /<br>
+                </div>
             </div>
         </div></div>
