--- a/Webseite/briefedition/public/data/briefe_html/brief10.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief10.html
@@ -1,11 +1,20 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">Offbach</span> 11 &amp;<br>
                 12<sup>ter</sup> Jan: 1797.<br>
                 Laroche.<br>
                 <span class="underline">E d. gl.<br>
                 b <span class="unclear">x</span> 13ten</span></span><br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 den 12 des jahres 1797<br>
                 <br>
@@ -27,6 +36,10 @@
                 Er etwa dieße besorgnis haben sollte –<br>
                 noch eine Frage – Schätzbarer Freund!<br>
                 haben Sie den <span class="entity work" data-key="werk13"><span class="underline"><span class="latintype">Cultivateur ameriain</span></span></span> bey H<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 <span class="entity person" data-keys='["person27"]'>Herrmann</span> bezalt – nur ja oder<br>
                 nein – Sie haben mehr zu thun, als<br>
@@ -47,5 +60,6 @@
                 fortgang aller unternehmung für meinen<br>
                 Neffen  – dieß ist sehr ernst der alten<br>
                 tante v Laroche<br>
+                </div>
             </div>
         </div></div>
