--- a/Webseite/briefedition/public/data/briefe_html/brief12.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief12.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 30 May<br>
                 <br>
@@ -19,11 +24,16 @@
                 <span class="underline">alten laRoche</span><br>
                 arme <span class="latintype">Sapho</span> –<br>
                 <span class="entity person" data-keys='["person82"]'>V Meyrs</span> Zufriedenheit freut mich –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">Offb</span> 30 May<br>
                 1797.<br>
                 Laroche.<br>
                 <span class="underline">E gl.<br>
                 b <span class="unclear">x x</span> Juny</span></span><br>
+                </div>
             </div>
         </div></div>
