--- a/Webseite/briefedition/public/data/briefe_html/brief13.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief13.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 17 8br<br>
                 <br>
@@ -24,6 +29,10 @@
                 weiß – und denke –<br>
                 glük wünsche ich Ihnen zu ankunft Ihres<br>
                 Freunds <span class="entity person" data-keys='["person33"]'>Göthe</span> – da<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 ist aber mein Neffe mit Hertz<br>
                 und Kopf zwischen Freund u Freundin<br>
@@ -47,6 +56,10 @@
                 mit Ihrem Großen Freund – bey einem<br>
                 <span class="entity work" data-key="werk15">Platos gastmal</span> ähnlichen Schmauße an der<br>
                 Seite einer Diotima, <span class="underline">u</span><br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 erzälen mir einst, von der wirkung<br>
                 welche Ihr Geist – und glük davon<br>
@@ -69,5 +82,6 @@
                 also einmal wieder hoffe –<br>
                 grüßen Sie guten, Schätzbaren <span class="entity person" data-keys='["person13"]'>Schwarzkopf</span><br>
                 von alter laRoche<br>
+                </div>
             </div>
         </div></div>
