--- a/Webseite/briefedition/public/data/briefe_html/brief14.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief14.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 29 merz 1798<br>
                 <br>
@@ -21,6 +26,10 @@
                 da könnt ich Sie bey <span class="entity person" data-keys='["person41"]'>hofrath <span class="underline">Wucherer</span></span> sehen<br>
                 und sprechen – in 14 tag hoffe wieder da<br>
                 zu seyn – Gott<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 daß ich nur <span class="underline">Sie</span> nicht versäume nicht<br>
                 verliehre – daß nur die Franken<br>
@@ -39,6 +48,10 @@
                 =schaft wurde der Staats <span class="latintype">Cörper</span> von teutsch<br>
                 =land aufgelößt – wie soll mein blutt in<br>
                 dießer luft neue <span class="latintype">Consistenz</span> <span class="underline">erhalten können</span><br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 der Himmel Seegne – erhalte, und<br>
                 schütze <span class="underline">Sie</span> edler schätzbarer Freund!<br>
@@ -52,11 +65,16 @@
                 armen Tante vlaRoche<br>
                 ich reiße gleich ab nach <span class="entity place" data-key="ort1">offenbach</span> –<br>
                 aber <span class="entity place" data-key="ort9">Rastadt</span> besuche einen tag –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">offenbach</span> <span class="unclear">x</span> 29ter<br>
                 Merz 1798.<br>
                 Laroche.<br>
                 <span class="underline">E d. 24 Juny.<br>
                 b. d gl.</span></span><br>
+                </div>
             </div>
         </div></div>
