--- a/Webseite/briefedition/public/data/briefe_html/brief15.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief15.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 28 Jully 1798<br>
                 <br>
@@ -25,6 +30,10 @@
                 =ungen</span> auf meine <span class="latintype">Phantasie</span> mit dem Schreib-<br>
                 =tisch – <span class="latintype">O Gerning</span>! es ist mir belohnung für<br>
                 das mitleiden<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 mit welchem ich einen alten Feldroßen<br>
                 =stok, in meinem Garten rettete – welchen<br>
@@ -49,6 +58,10 @@
                 vertzeyhen Sie der alten alten tante – und<br>
                 Sagen den leuten nichts davon –<br>
                 hier sonderbare Verse<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 die Sie vielleicht nicht kennen – und die<br>
                 abschrift eines impromtu von <span class="entity person" data-keys='["person43"]'>Lavater</span> –<br>
@@ -73,6 +86,10 @@
                 <br>
                 wer ist Frau von <span class="latintype">Gromer</span> von der Ll. schreibt?<br>
                 adieu in Eile tante LaRoche /<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 / noch ein wort –<br>
                 hätten Sie <span class="latintype">Enthousiamus</span> genug<br>
@@ -88,5 +105,6 @@
                 Laroche.<br>
                 <span class="underline">E d. 29ten<br>
                 b <span class="unclear">x</span> 3<sup>ten</sup> aug.</span></span><br>
+                </div>
             </div>
         </div></div>
