--- a/Webseite/briefedition/public/data/briefe_html/brief16.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief16.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 14 august<br>
                 <br>
@@ -20,6 +25,10 @@
                 der <span class="entity person" data-keys='["person77"]'>Brunn</span> ist reich er zalt es gerne<br>
                 der Himmel Seegne jeden othemzug in Hauße<br>
                 zu Ruhe des gemüths, u gesundheit des Cörpers<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 für Sie – und Freund <span class="entity person" data-keys='["person45"]'>Hüsgen</span> –<br>
                 es wird schön seyn, mit Ihnen nach <span class="entity place" data-key="ort11">Dieburg</span><br>
@@ -42,6 +51,10 @@
                 gieng hinter dem <span class="entity place" data-key="ort7">taunus</span> unter in voller<br>
                 pracht – u zwischen den bäumen des kleinen<br>
                 waldes fielen noch<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 von ihren Stralen auf dieße Hügel, der<br>
                 abend wind, war kühl, als die luft, vor<br>
@@ -62,6 +75,10 @@
                 hier eine Frau – die gestalt ist nur einen<br>
                 schritt von Ihnen - - - - adieu in Eile –<br>
                 alt ergeben tante Laroche<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">offb</span> 14<sup>ter</sup><br>
                 aug. 1798.<br>
@@ -75,5 +92,6 @@
                 einen Stern Kranz – mit unsterblichen Roßen, und<br>
                 <span class="latintype">Myrthen</span> gemischt zur Crone bestimmte –<br>
                 <span class="latintype">Sophie la Roche</span><br>
+                </div>
             </div>
         </div></div>
