--- a/Webseite/briefedition/public/data/briefe_html/brief17.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief17.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 10 7br 1798<br>
                 <br>
@@ -22,6 +27,10 @@
                 ein servietten muster aus meinen augen verbant<br>
                 welches der gebrochne staab heißt – weil es so<br>
                 sehr mich an die<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 die abgebrochne unteredungen erin-<br>
                 =nert – <span class="latintype">adieu</span> und dank für nachricht<br>
@@ -40,6 +49,10 @@
                 / haben Sie <span class="entity work" data-key="werk26"><span class="latintype">Fontenells maximes et ideès</span></span> geleßen<br>
                 <span class="underline">u</span> ist folgende erklärung der natur<br>
                 des <span class="latintype">Enthousiasmus</span> richtig –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 / das eigene deß <span class="latintype">Enthousiasmus</span><br>
                 ist nicht, die Einbildungs kraft<br>
@@ -52,12 +65,20 @@
                 mit der <span class="latintype">Copie</span> über <span class="entity person" data-keys='["person54"]'><span class="latintype">Fontenelle</span></span> <span class="underline">u</span> dem<br>
                 wunsch endige – daß es Ihr looß seyn<br>
                 möge –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">Offenbach</span> 10<sup>ter</sup><br>
                 7ber 1798.<br>
                 Laroche.<br>
                 <span class="underline">E d. gl.<br>
                 b <span class="unclear">x</span> 12ten</span></span><br>
+                </div>
+                <div class="
+            page
+          ">
                 [5]
                 <span class="latintype"><span class="entity person" data-keys='["person54"]'>Fontenelle</span> - indiferent aux eloges – et aux Epigrames<br>
                 La delicatesse, et la moderation quil portait dans L'amour<br>
@@ -66,5 +87,6 @@
                 Cabinet – sa bienfaisance fruit de son raisonement plus que de la sensibi<br>
                 =litè – et ce bonheur inalterable que sa philosophie lui procurait<br>
                 pres d'un Siecle –</span><br>
+                </div>
             </div>
         </div></div>
