--- a/Webseite/briefedition/public/data/briefe_html/brief18.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief18.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 5 8br um 11 uhr morgens<br>
                 <br>
@@ -21,6 +26,10 @@
                 Neffe daß Sie mir dieße edle Freude<br>
                 mitheilten – haben Sie denn wohl auch<br>
                 achtung gegeben mit<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 welcher <span class="latintype">mienn</span>, und mit welchem<br>
                 ton der Stimme <span class="entity person" data-keys='["person9"]'>Fr. v. Sch.</span> Ihnen<br>
@@ -40,6 +49,10 @@
                 die Seele erschien, wie in dießen<br>
                 Scherzi – man würde auch artige, und<br>
                 bedeutende grouppen sehen –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 O ich muß Sie noch in <span class="underline">Ihrem</span><br>
                 <span class="underline">Hauß</span> unter Ihren Lieblingen<br>
@@ -55,11 +68,16 @@
                 der dieße büchelg schreibt absatz<br>
                 schaffen wie soll ich daß anfangen?<br>
                 nähme ein buchhändler was in verlag?<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">Offenbach</span> den<br>
                 5<sup>ten</sup> 8br 1798<br>
                 Laroche.<br>
                 <span class="underline">E den gl.<br>
                 b. den 12ten.</span></span><br>
+                </div>
             </div>
         </div></div>
