--- a/Webseite/briefedition/public/data/briefe_html/brief19.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief19.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 La Roche an Gerning<br>
                 <span class="entity place" data-key="ort1">Offenbach</span> d. 31 Xbr. 98.<br>
@@ -28,6 +33,10 @@
                 d Sie zu viel sagten, und nun nichts mehr davon!<br>
                 die wohlwollenden Grüsse von <span class="entity person" data-keys='["person6"]'>Wieland</span>, <span class="entity person" data-keys='["person5"]'>Herder</span>, <span class="entity person" data-keys='["person33"]'>Göthe</span><br>
                 u.s.w. machten mir große Freude. die Aussicht, welche der<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 morgende Tag mir auf schöne Tage in <span class="entity place" data-key="ort14">Osmannstädt</span><br>
                 eröffnete, ist mehr als Freude – aber meine gütigen<br>
@@ -38,5 +47,6 @@
                 Dichter vor meines Neffen Dank.<br>
                 Warum antwortet er der <span class="entity person" data-keys='["person24"]'>Bandemer</span> nicht? Sie<br>
                 wohnt nun bey der Pfarre in <span class="entity place" data-key="ort25">Neuburg</span>.<br>
+                </div>
             </div>
         </div></div>
