--- a/Webseite/briefedition/public/data/briefe_html/brief2.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief2.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 6. Fbr 96<br>
                 
@@ -21,6 +26,10 @@
                 die prediger gedroht haben – sie wolten<br>
                 öfentlich den aufruhr predigen, und <span class="entity person" data-keys='["person3"]'>Hufnagel</span><br>
                 wird um rath gefragt, was in der Sache zu<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 thun sey ---<br>
                 wird mein Neffe nicht bezaubert<br>
@@ -40,6 +49,10 @@
                 genommen – also Freund! Kann<br>
                 unßer großer guter <span class="entity person" data-keys='["person5"]'>Herder</span> nicht bös seyn<br>
                 wenn noch andre den Mann nennen<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 und mich reut sehr die stelle in dem<br>
                 2ten band <span class="entity work" data-key="werk1"><span class="latintype">Resignation</span></span> geändert zu haben<br>
@@ -58,5 +71,6 @@
                 das blätgen geht erst heut den 7 – es kam<br>
                 niemand zu mir, weder <span class="entity person cert-low" data-keys='["person1"]'>S.</span> noch <span class="entity person cert-low" data-keys='["person85"]'>vater</span>, man<br>
                 schikte nur Kutsche –<br>
+                </div>
             </div>
         </div></div>
