--- a/Webseite/briefedition/public/data/briefe_html/brief20.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief20.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 An Gerning den 19 März 1799<br>
                 Mein schätzbarer Neffe, ist sehr gut, und sehr freund<br>
@@ -31,6 +36,10 @@
                 gut – wie <span class="entity person" data-keys='["person6"]'>Wieland</span> in Bieberach war – Er<br>
                 und seine Familie machen den Haupt Ge-<br>
                 genstand meiner Absichten bey ihm – un-<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 ter den Bäumen seines Sabinum wie Sie<br>
                 es nennen hoffte ich alle indulgenz der Phi=<br>
@@ -61,5 +70,6 @@
                 <span class="entity person" data-keys='["person83"]'>Senkenberg</span> - -<br>
                 <br>
                 <span class="underline">La Roche</span><br>
+                </div>
             </div>
         </div></div>
