--- a/Webseite/briefedition/public/data/briefe_html/brief21.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief21.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 29 august in <span class="entity place" data-key="ort16">Schönebek</span> 1799<br>
                 <br>
@@ -25,6 +30,10 @@
                 für die fürtrefliche denke –<br>
                 ich bin glüklich bey meinen <span class="entity person" data-keys='["person91"]'>Kindern</span><br>
                 habe aber jetzo immer<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 ein auge nach dem weg meiner abreiße<br>
                 gerichtet – war <span class="underline">u</span> bin hier in eine<br>
@@ -45,17 +54,26 @@
                 in einen <span class="entity person" data-keys='["person78"]'>80 jahr alten feldmarchall</span> verliebt=<br>
                 da schreibe keine große briefe mehr an andre<br>
                 Leute –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 <span class="latintype">à Monsieur<br>
                 Monsieur <span class="underline">Gerning</span> - Conseiller de Legation<br>
                 de La Cour de <span class="entity place" data-key="person23">Neapel</span><br>
                 <span class="entity place" data-key="person8"><span class="underline">Weimar</span></span></span><br>
                 <br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 <span class="recipient-note"><span class="entity place" data-key="person16">Schönebeck</span> <span class="unclear">x</span> 29<sup>ter</sup><br>
                 aug. 1799<br>
                 Laroche.<br>
                 <span class="underline">E d. 5<sup>ten</sup> 7ber.<br>
                 b. <span class="unclear">x</span> 22ten.</span></span><br>
+                </div>
             </div>
         </div></div>
