--- a/Webseite/briefedition/public/data/briefe_html/brief22.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief22.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 <span class="entity place" data-key="ort1">offenbach</span> den 19 Fbr 1800<br>
                 <br>
@@ -25,6 +30,10 @@
                 werde?<br>
                 <span class="entity work" data-key="werk20">Schatten risse merkwürdiger tage 1799</span> – mehr<br>
                 wird es nicht seyn<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 daß <span class="underline">Sie</span>, und der mir so Schäzbare <span class="entity person" data-keys='["person58"]'>Böttiger</span><br>
                 klagen, daß nicht mehr eigenthümliche züge<br>
@@ -48,6 +57,10 @@
                 welches <span class="underline">Sie</span> zu der beurteilung von <span class="entity person" data-keys='["person48"]'>Madame Schlosser</span><br>
                 leitete - - - Ihnen spitze Feedern gaab,<br>
                 und stark geschwärzte tinte aufgoß<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 ach Gerning! sage ich – sonst nichts –<br>
                 <span class="entity person" data-keys='["person58"]'>H Böttiger</span> sagen Sie – daß Er für die edle<br>
@@ -71,6 +84,10 @@
                 oft dachte ich an <span class="underline">Sie</span> nie hörte ich, nie<br>
                 laß ich, den nahmen <span class="entity place" data-key="ort23"><span class="underline"><span class="latintype">Neapel</span></span></span> – ohne rührung<br>
                 ohne tränen, <span class="underline">u</span> wünsche<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 O der schöne Brief, den von <span class="entity person" data-keys='["person63"]'>Sanna Huth</span> aus <span class="entity place" data-key="ort27">Rom</span><br>
                 erhielt – kein wizigs, aber ein großes weißes weßen –<br>
@@ -104,6 +121,10 @@
                 v. Kalb</span>? weil ein<br>
                 keine antwort er<br>
                 hielt –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [5]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">Offenbach</span><br>
                 <span class="unclear">x</span> 19ter febr<br>
@@ -111,5 +132,6 @@
                 Laroche.<br>
                 <span class="underline">E d. 1<sup>ten</sup> Merz.<br>
                 b <span class="unclear">x</span> 18ten</span></span><br>
+                </div>
             </div>
         </div></div>
