--- a/Webseite/briefedition/public/data/briefe_html/brief23.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief23.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 <span class="entity place" data-key="ort1">offenbach</span> den 14 august 1800<br>
                 <br>
@@ -24,6 +29,10 @@
                 =der regen, der Erde bald wohlthun, und<br>
                 meinen Neffen wieder zu mir bringen<br>
                 mich reute<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 sehr – <span class="underline">daß ich</span> &lt;der lieben&gt; <span class="underline"><span class="entity person" data-keys='["person66"]'>Schlichtegroll</span> – nicht<br>
                 einen brief an <span class="entity person" data-keys='["person70"]'>Petersen</span> mitgaab –<br>
@@ -51,5 +60,6 @@
                 Laroche.<br>
                 <span class="underline">E d. gl.<br>
                 b <span class="unclear">x.</span> 16ten</span></span><br>
+                </div>
             </div>
         </div></div>
