--- a/Webseite/briefedition/public/data/briefe_html/brief24.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief24.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 <span class="entity place" data-key="ort1">offenbach</span> den 18 august 1800<br>
                 <br>
@@ -21,6 +26,10 @@
                 mir es doch ich bitte Sie – daß gedrukte<br>
                 zeug ist unwürdiger unßinn – der<br>
                 mich schmerzt –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 die wie <span class="entity person" data-keys='["person58"]'>böttger</span> sagt<br>
                 <span class="entity person" data-keys='["person1"]'><span class="underline">unähnliche Schwester</span></span> – bleibt den<br>
@@ -40,6 +49,10 @@
                 vielerleÿ außlegung unterworfen –<br>
                 <span class="underline">u</span> die menschen geben, so verschiedene<br>
                 Seiten zu sehen – <span class="latintype">adieu</span> guter Neffe<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 Nb von Papieren die Ihnen gehören<br>
                 habe sonst nichts<br>
@@ -57,11 +70,16 @@
                 <div class="l">böser Bube du bist selbst ein</div>
                 <div class="l">verdrehter Satyr</div>
                 </div></span>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">offenbach</span> <span class="unclear">x</span><br>
                 18<sup>ten</sup> Aug. 1800.<br>
                 Laroche.<br>
                 <span class="underline">E d. gl.<br>
                 b <span class="unclear">x</span> 21ten.</span></span><br>
+                </div>
             </div>
         </div></div>
