--- a/Webseite/briefedition/public/data/briefe_html/brief25.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief25.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 <span class="entity place" data-key="ort1">Offenbach</span> d. 16. 7br 1800<br>
                 <br>
@@ -21,5 +26,6 @@
                 bey mir in meiner Hütte sah – u meinen<br>
                 <span class="underline">Neffen</span> hätte dabey sehen mögen – bay alt<br>
                 Tante von la Roche<br>
+                </div>
             </div>
         </div></div>
