--- a/Webseite/briefedition/public/data/briefe_html/brief3.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief3.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 8 Fbr 1796<br>
                 <br>
@@ -20,6 +25,10 @@
                 ich unendlich schätzte – ihn bey meinen jungen<br>
                 ich darf sagen vortreflichen Söhnen meist<br>
                 befolgte – und<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 dachte, es kann auch in andren<br>
                 Familien gutes thun – wie meine<br>
@@ -39,6 +48,10 @@
                 umarmung für <span class="entity person" data-keys='["person8"]'>mutter</span> von<br>
                 guter alter tante<br>
                 La Roche<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 – <span class="entity person" data-keys='["person12"]'><span class="latintype">Bonstetten</span></span> wünscht bücher – Nb <span class="latintype">gute</span><br>
                 im teutschen zu kennen für Knaben<br>
@@ -57,5 +70,6 @@
                 Laroche.<br>
                 <span class="latintype">E d 8<sup>ten</sup><br>
                 b. d gl.</span><br></span>
+                </div>
             </div>
         </div></div>
