--- a/Webseite/briefedition/public/data/briefe_html/brief5.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief5.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 d 12 may 1796<br>
                 dank Lieber Theurer! für Ihren lieben brief<br>
@@ -12,6 +17,10 @@
                 wegen viel Ihrer Kentnisse – und edlen grundsätzen von<br>
                 was sprachen Sie dann auf dem Weeg – ich <span class="underline">Sie</span> im reden<br>
                 verathen <span class="double-underline">Sie</span> eher andre 10mal daß doch garstig wäre = mir gefällt das Wort <span class="underline">friedlen</span> - denn war<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 -lich es ist vom P. an – nicht des großen edlen Worts<br>
                 <span class="underline">Friede</span> werth - adieu Theurer Schätzbarer<br>
@@ -28,5 +37,6 @@
                 Laroche.<br>
                 <span class="underline">E gl.<br>
                 b gl</span><br></span>
+                </div>
             </div>
         </div></div>
