--- a/Webseite/briefedition/public/data/briefe_html/brief6.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief6.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 offenbach d 4 Juny 1796<br>
                 <br>
@@ -23,6 +28,10 @@
                 sehen will was ist – sondern was er wünscht –<br>
                 ich habe nun noch ein Histörchen zu erzählen wo<br>
                 <span class="underline">Sie</span> erschienen –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 vorgestern donnerstag d 2 Juny – kam morgens<br>
                 halb 10 uhr der grüne wagen mit <span class="entity person cert-low" data-keys='["person1"]'>Sophie</span> <span class="underline">u</span> <span class="entity person" data-keys='["person15"]'>Jenny</span><br>
@@ -44,6 +53,10 @@
                 kann – oder seyn wird - - - -<br>
                 Gerning! dießes wurde mir d 2 Juny 10 uhr morgens<br>
                 gesagt eh <span class="entity person" data-keys='["person16"]'>dalberg</span> kam<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 und noch Honig schlürfte - - - - - - Sie scheinen<br>
                 auch sehr begierig darnach, weil sie sorgfältig<br>
@@ -66,6 +79,10 @@
                 adieu guter Schätzbarer Neffe! wie gerne möchte<br>
                 tante Sie sprechen<br>
                 La Roche<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 Sagen Sie der würdigen <span class="entity person" data-keys='["person8"]'>Mutter</span>, die ich liebe<br>
                 und Ehre, das es unmöglich war, in Ihr Haus<br>
@@ -77,5 +94,6 @@
                 Laroche.<br>
                 <span class="underline">E d. gl.<br>
                 b. <span class="unclear">x</span> 7ten</span><br></span>
+                </div>
             </div>
         </div></div>
