--- a/Webseite/briefedition/public/data/briefe_html/brief8.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief8.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 <span class="recipient-note"><span class="underline">den 27</span> august 1796.<br>
                 <span class="underline">b.<span class="unclear">x.</span> 29<sup>ten</sup></span></span><br>
@@ -25,6 +30,10 @@
                 zugeschrieben werden könnte –<br>
                 das Sie zu bücher jemand in Paris haben glaube<br>
                 wohl – glaube<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 auch das die <span class="underline">Edle große <span class="entity person" data-keys='["person20"]'>Caroline</span></span> – in dem<br>
                 Werk von <span class="entity person" data-keys='["person92"]'><span class="underline"><span class="latintype">Grasset St Sauveur</span></span></span> –<br>
@@ -47,6 +56,10 @@
                 und seine Stimme – bey dem artigen wechsel<br>
                 gesang von Guldberg, das ich jung andrè zu<br>
                 musik empfal –<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 <span class="entity person" data-keys='["person19"]'>Meyer</span> soll gern herkommen – Doktor marschall<br>
                 ist sehr schwächlich – dann wird man froh seyn<br>
@@ -69,6 +82,10 @@
                 die geschichte von <span class="entity person" data-keys='["person3"]'>Hufnagel</span> kenn ich – machen<br>
                 Sie auf den Höhen des <span class="entity place" data-key="ort7">taunus</span> – mit <span class="entity person" data-keys='["person19"]'>meyer</span><br>
                 aus – woher es komme<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 das bey <span class="latintype">Philosophen</span> die Lebensweißheit<br>
                 und bey <span class="latintype">Theologen</span> die <span class="unclear">xxx</span> Religion un –<br>
@@ -88,5 +105,6 @@
                 kennt er seine Tante la Roche genug<br>
                 um dieße Frage zu nehmen wie sie aus<br>
                 meiner Seele kam?<br>
+                </div>
             </div>
         </div></div>
