--- a/Webseite/briefedition/public/data/briefe_html/brief9.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief9.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 11 des jahres 1797<br>
                 <br>
@@ -18,6 +23,10 @@
                 den nehmlichen Tag in meiner Hütte<br>
                 sind – denn beyde kamen nachmitag<br>
                 noch drolliger war<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 daß – da <span class="entity person" data-keys='["person13"]'>H v. S.</span> um einen Stok<br>
                 bat – <span class="entity person cert-low" data-keys='["person86"]'>H. Wagner</span> sagte –<br>
@@ -34,6 +43,10 @@
                 weil das bild der holden <span class="latintype">franquemont</span><br>
                 unmitelbar, von <span class="latintype">Sapho</span> erschiene, wie<br>
                 die blätter beyder<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 entwürfe zeigen – froh ist die alte<br>
                 wunderlich durch ihre brille gukende<br>
@@ -50,6 +63,10 @@
                 legen Sie doch theurer Neffe! Ihre Hand<br>
                 auf Ihr mir redlich erschienenes Herz<br>
                 und sagen<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 hatt <span class="entity person" data-keys='["person24"]'><span class="latintype">Sapho</span></span> auch von meinen billets<br>
                 geleßen? Das <span class="entity person" data-keys='["person19"]'>meyer</span> sie sah war in<br>
@@ -66,5 +83,6 @@
                 und <span class="underline">ernsthaften</span> wahren Seegen, auf Ihre<br>
                 <span class="underline">Ernsthafte</span> edler großer Thatsache gewiedme<br>
                 beschäftigung von Tante la Roche<br>
+                </div>
             </div>
         </div></div>
