--- a/Webseite/briefedition/public/data/briefe_html/brief11.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief11.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 den 18 des jahres 1797<br>
                 <br>
@@ -20,6 +25,10 @@
                 wird auch hindern helfen – das <span class="underline">meines Gernings</span><br>
                 güte nicht mißbraucht – und Seine Ruhe nicht gestört<br>
                 wird – O mein Neffe! glauben Sie dießer Mann<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 kann – und wird viel für Sie seyn – ohne zu<br>
                 rechnen, das Er dankbar sich <span class="latintype">attachiren</span> wird<br>
@@ -37,6 +46,10 @@
                 das Er edles Herz – und guten Geist hatt –<br>
                 denn nur niedre Seelen – und halbe Köpfe – haben miß-<br>
                 trauen in den Mann von großer Einsicht<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">Offbach</span> 18ter 1797.<br>
                 Laroche.<br>
@@ -48,5 +61,6 @@
                 Legation de la Cour de <span class="entity place" data-key="ort23">Neapel</span><br>
                 à<br>
                 <span class="entity place" data-key="ort2">Frankfort</span></span><br>
+                </div>
             </div>
         </div></div>
