--- a/Webseite/briefedition/public/data/briefe_html/brief4.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief4.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 d. 10 Fbr<br>
                 <br>
@@ -8,6 +13,10 @@
                 und zeige dich <span class="underline">großmütig</span> in deinem<br>
                 betragen gegen <span class="entity person" data-keys='["person13"]'><span class="latintype">Testa N.</span></span> u <span class="entity person" data-keys='["person9"]'>S.</span> ohne zu brechen<br>
                 in aller Eile - Tante la Roche<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">offenbach</span> 10 &amp; 11ter<br>
                 &amp; 14<span class="double-underline"><sup>ter</sup></span> febr 1796.<br>
@@ -15,6 +24,10 @@
                 13ter<br>
                 <span class="underline">E d. 11<span class="double-underline"><sup>ten</sup></span> &lt;15<span class="double-underline"><sup>ten</sup></span>&gt;<br>
                 b <span class="unclear">x</span> 16<span class="double-underline"><sup>ten</sup></span></span><br></span>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 d 11 Fbr 1796<br>
                 <br>
@@ -36,6 +49,10 @@
                 geben, was Seele, mit Kentnis und liebe alles<br>
                 moralisch schönen und guten vereint – unter den<br>
                 Menschen ist.<br>
+                </div>
+                <div class="
+            page
+          ">
                 [4]
                 Das Ihre gesinungen nicht ton der Saiten ihrer<br>
                 Lyra, sondern wirkung – der von Ihrem Geist<br>
@@ -54,6 +71,10 @@
                 vermög Ihrer Seelen Kräfte – <span class="underline">Edel, groß seyn</span><br>
                 tante, die Sie unendlich Schätzt, darf es sagen<br>
                 Rache zeigt Stärke, aber nicht größe<br>
+                </div>
+                <div class="
+            page
+          ">
                 [5]
                 Reden Sie doch nur mit wenigen, von dem gantzen<br>
                 ändern Sie nichts – an dem was <span class="double-underline">Sie sind</span><br>
@@ -73,11 +94,16 @@
                 einmal Ihnen etwas von billigen wünschen – u mäßiger<br>
                 Hofnung sagen Ihre ganz ergebene<br>
                 tante la Roche<br>
+                </div>
+                <div class="
+            page
+          ">
                 [6]
                 verzeyhen Sie daß das liedchen beylege<br>
                 die worte sind von mir, als ich unaussprechlich<br>
                 mißhandlet wurde – es ist das blatt womit<br>
                 ich den gestrigen kleinen Brief vergrößern<br>
                 und das verliehren hindern wolte/<br>
+                </div>
             </div>
         </div></div>
