--- a/Webseite/briefedition/public/data/briefe_html/brief7.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief7.html
@@ -1,5 +1,10 @@
 <div xmlns:tei="http://www.tei-c.org/ns/1.0" class="tei-document"><div class="tei-body">
-            <div class="tei-div">
+            <div class="
+            tei-div
+          ">
+                <div class="
+            page
+          ">
                 [1]
                 d. 15 august abends<br>
                 <br>
@@ -17,6 +22,10 @@
                 Sie Zu mir - ich will Sie wie einen zweyten<br>
                 <span class="entity person" data-keys='["person17"]'>Frantz</span> empfangen und stetts so für Sie denken<br>
                 mein Hertz meine Gesinungen für <span class="underline">Sie</span> und die<br>
+                </div>
+                <div class="
+            page
+          ">
                 [2]
                 <span class="entity person" data-keys='["person8"]'>würdige Frau</span> - geben mir ein recht<br>
                 meine Thräume mit den Ihrigen zu<br>
@@ -34,6 +43,10 @@
                 mir noch mittwochs sagten – der Ewige <span class="underline">erhalte<br>
                 Sie</span> theurer bester junger Mann!<br>
                 ihre Laroche<br>
+                </div>
+                <div class="
+            page
+          ">
                 [3]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">Offenbach</span> 15r. 18<sup>ter</sup><br>
                 Aug. 1796.<br>
@@ -48,5 +61,6 @@
                 de sa M. le Roi de <span class="entity place" data-key="ort23">Neaple</span><br>
                 à<br>
                 <span class="entity place" data-key="ort2">Frankfort</span></span><br>
+                </div>
             </div>
         </div></div>
